--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/appsettings.json
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "MySqlConnection": "server=localhost;port=3306;user=root;password=123456;database=automacaosalas"
+    "MySqlConnection": "server=localhost;port=3306;user=root;password=123456;database=automacaosalas",
+    "UsuariosConnection": "server=localhost;port=3306;user=root;password=123456;database=usuarios"
   },
   "Logging": {
     "LogLevel": {
