--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/appsettings.json
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/appsettings.json
@@ -3,6 +3,13 @@
     "MySqlConnection": "server=localhost;port=3306;user=root;password=123456;database=automacaosalas",
     "UsuariosConnection": "server=localhost;port=3306;user=root;password=123456;database=usuarios"
   },
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "Username": "smartsala.ufs@gmail.com",
+    "Password": "sfrh cruw yjna xxpa",
+    "From": "smartsala.ufs@gmail.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
